public/css/main.css
html,
body {
  height: 100%;
}

body {
  font-family: 'Montserrat', sans-serif;
  margin: 0;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: 'Roboto', sans-serif;
  text-transform: uppercase;
}

h1 {
  font-weight: 900;
}

section {
  padding-top: 50px;
  padding-bottom: 50px;
}


.separator {
  max-width: 300px;
  margin: 0 auto 15px auto;
}

.separator-light {
  border-top: solid 3px #fff;
  color: #fff;
}

.separator-dark {
  border-top: solid 3px;
}

/* intro styles */

.container {
  margin: 10px 15px;
  width: 98%;
}

.brandIcon {
  max-height: 64px;
  margin: 10px;
  float: left;
}

.navbar-brand {
  margin-top: 5%;
  font-size: 3em;
  font-family: "Roboto", sans-serif;
  font-weight: 900;
  letter-spacing: 2px;
}

#navbar {
  margin-top: 1.5%;
  letter-spacing: 1px;
}

#button {
  border: none;
  font-family: inherit;
  font-size: inherit;
  color: inherit;
  background: none;
  cursor: pointer;
  padding: 15px 40px;
  display: inline-block;
  margin-top: -10px;
  text-transform: uppercase;
  letter-spacing: 1px;
  outline: none;
  position: relative;
  -webkit-transition: all 0.3s;
  -moz-transition: all 0.3s;
  transition: all 0.3s;
}

#button:after {
  content: '';
  position: absolute;
  z-index: -1;
  -webkit-transition: all 0.3s;
  -moz-transition: all 0.3s;
  transition: all 0.3s;
}

#button {
  border: 3px solid #fff;
  color: #fff;
}

#button:hover,
#button:active {
  color: #ef1a28;
  background: #fff;
}

#heading {
  background: transparent;
  min-height: 100%;
  position: relative;
  margin-top: 5%;
}

 /* code to apply filter to background from stackoverflow.com */
#heading:before {
  content: ' ';
  width: 100%;
  height: 100%;
  position: absolute;
  z-index: -1;
  top: 0px;
  left: 0px;
  background: url("https://media.giphy.com/media/l0HlRuRXR2SqXUpqw/giphy.gif") center center fixed no-repeat;
  background-size: cover;
  -webkit-background-size: cover;
  -o-background-size: cover;
  -moz-background-size: cover;
  -webkit-filter: brightness(50%);
  -moz-filter: brightness(50%);
  -o-filter: brightness(50%);
  -ms-filter: brightness(50%);
  filter: brightness(50%);
}

.intro-text {
  color: #fff;
  padding: 100px 0;
}

#scroll {
	margin-top: 100px;
	color: #fff;
  	font-size: 5em;
  	padding: 10px;
}


/* code for caption hover effects from Codrops and K. Anthony;  slightly modified*/
figure {
  position: relative;
  overflow: hidden;
  margin: 15px auto;
  max-width: 578px;
  max-height: 398px;
}

figure img {
  position: relative;
  display: block;
  opacity: 0.7;
}

figure figcaption {
  padding: 1em;
  color: #fff;
  font-size: 1.25em;
}

figure figcaption,
figure figcaption > a {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

figure h2 {
  word-spacing: -0.15em;
  font-weight: 200;
}

figure h2 span {
  font-weight: 500;
}

figure h2,
figure p {
  margin: 0;
  letter-spacing: 1px;
}

.portfolio-item {
  margin: 15px auto;
}

figure.effect-portfolio {
  background: #333;
}

figure.effect-portfolio img,
figure.effect-portfolio h2 {
  -webkit-transition: -webkit-transform 0.35s;
  transition: transform 0.35s;
}

figure.effect-portfolio h2,
figure.effect-portfolio p {
  position: absolute;
  bottom: 0;
  left: 0;
  padding: 30px;
}

figure.effect-portfolio p {
  text-transform: none;
  font-size: 90%;
  opacity: 0;
  -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
  transition: opacity 0.35s, transform 0.35s;
  -webkit-transform: translate3d(0, 50px, 0);
  transform: translate3d(0, 50px, 0);
}

figure.effect-portfolio:hover img {
  -webkit-transform: translate3d(0, -80px, 0);
  transform: translate3d(0, -80px, 0);
}

figure.effect-portfolio:hover h2 {
  -webkit-transform: translate3d(0, -100px, 0);
  transform: translate3d(0, -100px, 0);
}

figure.effect-portfolio:hover p {
  opacity: 1;
  -webkit-transform: translate3d(0, 0, 0);
  transform: translate3d(0, 0, 0);
}


/* about styles */
#about {
  font-size: 1.5em;
  background: #ef1a28;
  color: #fff;
}

#lorem {
  margin: 80px auto;
}


/* contact styles */

.social {
  padding: 0px;
}

.social li {
	list-style: none;
  	display: inline-block;
  	margin: 10px;
}

.social li a {
  display: inline-block;
  color: #ef1a28;
  width: 50px;
  height: 50px;
}

#github, #linked-in {
  border-radius: 50%;
  border: solid 2px #ef1a28;
  font-size: 1.5em;
  padding: 10px;
}

#github:hover, #linked-in:hover,
#github:active, #linked-in:active {
  color: #fff;
  background: #ef1a28;
  border: solid 2px #fff;
}



/*footer styles*/

footer { 
  font-weight: bold; 
  text-align: center;
}


/*show page styles*/
#profile, #gamelist {
	padding-left: 20%;
  padding-top: 10%
}

#profile-icon, #gamelist-icon {
	border-radius: 2%;
	padding-left: 20%;
  max-height: 300px;
  max-width: 500px;
}

#profile-info, #gamelist-info {
	display: inline-block;
	float: left;
  max-width: 500px;
  overflow: auto;
}

#user-buttons, #gamelist-buttons {
  display: flex;
  margin-left: 35%;
}



.gameBackground {
  display: flex;
  align-items: center;
  flex-direction: column;
  justify-content: space-around;
  height: 400px;
  width: 100%;
}

img.parallax-slider {
  -webkit-filter: blur(7px);
  -moz-filter: blur(7px);
  -o-filter: blur(7px);
  -ms-filter: blur(7px);
  filter: blur(7px);
}

.gameTitle {
  padding-top: 250px;
  font-size: 4em;
  color: white;
  margin-left: -100px;
  font-family: "Roboto";
  font-weight: 900;
  letter-spacing: 1px;
}

#addGameButton {
  padding: 10px 90px;
  margin-top: 25px;
}

#gamelistPsuedoButton {
   padding: 10px 90px;
   borer: none;
}

.singleCoverImg {
  align-self: baseline;
  margin-left: 5%;
  position: relative;
}

.detail {
  margin-top: 10px;
}

.content {
  margin: auto;
  width: 95%;
}

.slider {
  margin: 100px auto 50px;
}


.slick-prev:before, .slick-next:before {
  color: #000000;
}

.image {
  padding: 10px;
}

.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  border: 0;
}

#footer {
  font-size: 1.5em;
  background: #ef1a28;
  color: #fff;
  margin: 0;
  width: 100%;
}

#madewithlove {
   background: #ef1a28;
   color: #fff;
}

#footer .social li {
  list-style: none;
  display: inline-block;
  margin: 10px;
}

#footer .social li a {
  display: inline-block;
  color: #fff;
  width: 50px;
  height: 50px;
}

#footer #github, #footer #linked-in {
  border-radius: 50%;
  border: solid 2px #fff;
  font-size: 1em;
  padding: 10px;
}

#footer #github:hover, #footer #linked-in:hover,
#footer #github:active, #footer #linked-in:active {
  color: #ef1a28;
  background: #fff;
  border: solid 2px #ef1a28;
}

/*** form styles ***/

.formContainer {
  margin: 10% 30%;
  padding: 30px;
  border: solid 1px #b2b2b2;
}

#inverse-button {
  border: none;
  border-radius: 0;
  font-family: inherit;
  font-size: inherit;
  color: inherit;
  background: #ef1a28;
  cursor: pointer;
  padding: 15px 40px;
  display: inline-block;
  margin: 20px auto;
  text-transform: uppercase;
  letter-spacing: 1px;
  outline: none;
  position: relative;
}

#inverse-button:after {
  content: '';
  position: absolute;
  z-index: -1;
}

#inverse-button {
  border: 3px solid #ef1a28;
  color: #fff;
}

#inverse-button:hover,
#inverse-button:active {
  color: #fff;
  background: #940000;
  border: 3px solid #940000;
}

/****** Media Queries *****/

@media only screen and (max-width: 950px) {
  figure.effect-portfolio p {
    font-size: 90%
  }
  figure h2 {
    font-size: 100%;
  }
}

@media only screen and (min-device-width: 320px) and (max-device-width: 1024px) {
  .brandIcon {
    max-height: 48px;
  }
  .navbar-brand {
    font-size: 1em;
    margin-top: 2%;
  }
  .formContainer {
    margin: 10px 50px;
  }
  /* Hide hover effects for mobile */
  figure.effect-portfolio:hover img {
    -webkit-transform: none;
    transform: none;
  }
  figure.effect-portfolio:hover h2 {
    -webkit-transform: none;
    transform: none;
  }
  figure.effect-portfolio:hover p {
    opacity: 0;
    -webkit-transform: none;
    transform: none;
  }
}

@media only screen and (min-width: 768px) and (max-width: 950px) {
  #navbar {
    font-size: 0.75em;
  }
  .intro-text {
    color: #fff;
    padding: 200px 0;
  }
}

@media only screen and (min-width: 950px) {
  .intro-text {
    color: #fff;
    padding: 300px 0;
  }
}

